--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -59,7 +59,7 @@ jobs:
           /k:"LeVanchua_NetSdrClient2" `
           /o:"levanchua" `
           /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
-          /d:sonar.cs.opencover.reportsPaths="**/coverage.xml" `
+          /d:sonar.cs.opencover.reportsPaths="TestResults/NetSdrClientApp.coverage.xml,TestResults/EchoServer.coverage.xml" `
           /d:sonar.cpd.cs.minimumTokens=40 `
           /d:sonar.cpd.cs.minimumLines=5 `
           /d:sonar.exclusions=**/bin/**,**/obj/**,**/sonarcloud.yml `
@@ -72,10 +72,21 @@ jobs:
         run: dotnet build NetSdrClient.sln -c Release --no-restore
       - name: Tests with coverage (OpenCover)
         run: |
+          New-Item -ItemType Directory -Force -Path "$PWD\TestResults" | Out-Null
+      
+          # NetSdrClientApp
           dotnet test NetSdrClientAppTests/NetSdrClientAppTests.csproj -c Release --no-build `
             /p:CollectCoverage=true `
-            /p:CoverletOutput=TestResults/coverage.xml `
-            /p:CoverletOutputFormat=opencover
+            /p:CoverletOutput="$PWD\TestResults\NetSdrClientApp.coverage.xml" `
+            /p:CoverletOutputFormat=opencover `
+            /p:Exclude="[EchoServer]*"
+      
+          # EchoServer
+          dotnet test EchoServerTests/EchoServerTests.csproj -c Release --no-build `
+            /p:CollectCoverage=true `
+            /p:CoverletOutput="$PWD\TestResults\EchoServer.coverage.xml" `
+            /p:CoverletOutputFormat=opencover `
+            /p:Exclude="[*Tests]*"
         shell: pwsh
       # 3) END: SonarScanner
       - name: SonarScanner End
