--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -82,9 +82,10 @@ jobs:
             /p:Exclude="[EchoServer]*"
       
           # EchoServer
-          dotnet test EchoServerTest1/EchoServerTest.csproj -c Release --no-build  /p:CollectCoverage=true  
-            /p:CoverletOutput="$PWD\TestResults\EchoServer.coverage.xml"  
-            /p:CoverletOutputFormat=opencover  
+          dotnet test EchoServerTest1/EchoServerTest.csproj -c Release --no-build `  
+            /p:CollectCoverage=true `  
+            /p:CoverletOutput="$PWD\TestResults\EchoServer.coverage.xml" `
+            /p:CoverletOutputFormat=opencover `  
             /p:Exclude="[*Tests]*"
         shell: pwsh
       # 3) END: SonarScanner
