--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -59,7 +59,7 @@ jobs:
           /k:"LeVanchua_NetSdrClient2" `
           /o:"levanchua" `
           /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
-          /d:sonar.cs.opencover.reportsPaths="TestResults/NetSdrClientApp.coverage.xml,TestResults/EchoServer.coverage.xml" `
+          /d:sonar.cs.opencover.reportsPaths="TestResults/NetSdrClientApp.coverage.xml,TestResults/EchoServer11.coverage.xml" `
           /d:sonar.cpd.cs.minimumTokens=40 `
           /d:sonar.cpd.cs.minimumLines=5 `
           /d:sonar.exclusions=**/bin/**,**/obj/**,**/sonarcloud.yml `
@@ -84,7 +84,7 @@ jobs:
           # EchoServer
           dotnet test EchoServerTest1/EchoServerTest.csproj -c Release --no-build `
             /p:CollectCoverage=true `
-            /p:CoverletOutput="$PWD\TestResults\EchoServer.coverage.xml" `
+            /p:CoverletOutput="$PWD\TestResults\EchoServer11.coverage.xml" `
             /p:CoverletOutputFormat=opencover `
             /p:Exclude="[*Tests]*"
 
