--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -36,15 +36,17 @@ on:
   workflow_dispatch:
 
 permissions:
-  pull-requests: read # allows SonarCloud to decorate PRs with analysis results
+  pull-requests: read
 
 jobs:
   sonar-check:
     name: Sonar Check
-    runs-on: windows-latest   # безпечно для будь-яких .NET проектів
+    runs-on: windows-latest
+
     steps:
       - uses: actions/checkout@v4
-        with: { fetch-depth: 0 }
+        with:
+          fetch-depth: 0
 
       - uses: actions/setup-dotnet@v4
         with:
@@ -52,44 +54,48 @@ jobs:
 
       # 1) BEGIN: SonarScanner for .NET
       - name: SonarScanner Begin
+        shell: pwsh
         run: |
           dotnet tool install --global dotnet-sonarscanner
           echo "$env:USERPROFILE\.dotnet\tools" >> $env:GITHUB_PATH
+
           dotnet sonarscanner begin `
-          /k:"LeVanchua_NetSdrClient2" `
-          /o:"levanchua" `
-          /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
-          /d:sonar.cs.opencover.reportsPaths="TestResults/NetSdrClientApp.coverage.xml,TestResults/EchoServer11.coverage.xml" `
-          /d:sonar.cpd.cs.minimumTokens=40 `
-          /d:sonar.cpd.cs.minimumLines=5 `
-          /d:sonar.exclusions=**/bin/**,**/obj/**,**/sonarcloud.yml `
-          /d:sonar.qualitygate.wait=true
-        shell: pwsh
+            /k:"LeVanchua_NetSdrClient2" `
+            /o:"levanchua" `
+            /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
+            /d:sonar.cs.opencover.reportsPaths="TestResults/*.coverage.xml" `
+            /d:sonar.cpd.cs.minimumTokens=40 `
+            /d:sonar.cpd.cs.minimumLines=5 `
+            /d:sonar.exclusions="**/bin/**,**/obj/**,**/*Tests*/**,EchoServerTests/**,EchoTcpServer/**,EchoServer/**" `
+            /d:sonar.qualitygate.wait=true
+
       # 2) BUILD & TEST
       - name: Restore
         run: dotnet restore NetSdrClient.sln
+
       - name: Build
         run: dotnet build NetSdrClient.sln -c Release --no-restore
+
       - name: Tests with coverage (OpenCover)
+        shell: pwsh
         run: |
           New-Item -ItemType Directory -Force -Path "$PWD\TestResults" | Out-Null
-      
-          # NetSdrClientApp
+
+          # NetSdrClientApp tests
           dotnet test NetSdrClientAppTests/NetSdrClientAppTests.csproj -c Release --no-build `
             /p:CollectCoverage=true `
             /p:CoverletOutput="$PWD\TestResults\NetSdrClientApp.coverage.xml" `
             /p:CoverletOutputFormat=opencover `
-            /p:Exclude="[EchoServer]*"
-      
-          # EchoServer
+            /p:Exclude="[*Tests]*"
+
+          # EchoServer11 tests
           dotnet test EchoServerTest1/EchoServerTest.csproj -c Release --no-build `
             /p:CollectCoverage=true `
             /p:CoverletOutput="$PWD\TestResults\EchoServer11.coverage.xml" `
             /p:CoverletOutputFormat=opencover `
             /p:Exclude="[*Tests]*"
 
-        shell: pwsh
       # 3) END: SonarScanner
       - name: SonarScanner End
-        run: dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
         shell: pwsh
+        run: dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
