--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -36,17 +36,15 @@ on:
   workflow_dispatch:
 
 permissions:
-  pull-requests: read
+  pull-requests: read # allows SonarCloud to decorate PRs with analysis results
 
 jobs:
   sonar-check:
     name: Sonar Check
-    runs-on: windows-latest
-
+    runs-on: windows-latest   # безпечно для будь-яких .NET проектів
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+        with: { fetch-depth: 0 }
 
       - uses: actions/setup-dotnet@v4
         with:
@@ -54,48 +52,43 @@ jobs:
 
       # 1) BEGIN: SonarScanner for .NET
       - name: SonarScanner Begin
-        shell: pwsh
         run: |
           dotnet tool install --global dotnet-sonarscanner
           echo "$env:USERPROFILE\.dotnet\tools" >> $env:GITHUB_PATH
-
           dotnet sonarscanner begin `
-            /k:"LeVanchua_NetSdrClient2" `
-            /o:"levanchua" `
-            /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
-            /d:sonar.cs.opencover.reportsPaths="TestResults/*.coverage.xml" `
-            /d:sonar.cpd.cs.minimumTokens=40 `
-            /d:sonar.cpd.cs.minimumLines=5 `
-            /d:sonar.exclusions="**/bin/**,**/obj/**,**/*Tests*/**,EchoServerTests/**,EchoTcpServer/**,EchoServer/**" `
-            /d:sonar.qualitygate.wait=true
-
+          /k:"LeVanchua_NetSdrClient2" `
+          /o:"levanchua" `
+          /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
+          /d:sonar.cs.opencover.reportsPaths="TestResults/NetSdrClientApp.coverage.xml,TestResults/EchoServer.coverage.xml" `
+          /d:sonar.cpd.cs.minimumTokens=40 `
+          /d:sonar.cpd.cs.minimumLines=5 `
+          /d:sonar.exclusions=**/bin/**,**/obj/**,**/sonarcloud.yml `
+          /d:sonar.qualitygate.wait=true
+        shell: pwsh
       # 2) BUILD & TEST
       - name: Restore
         run: dotnet restore NetSdrClient.sln
-
       - name: Build
         run: dotnet build NetSdrClient.sln -c Release --no-restore
-
       - name: Tests with coverage (OpenCover)
-        shell: pwsh
         run: |
           New-Item -ItemType Directory -Force -Path "$PWD\TestResults" | Out-Null
-
-          # NetSdrClientApp tests
+      
+          # NetSdrClientApp
           dotnet test NetSdrClientAppTests/NetSdrClientAppTests.csproj -c Release --no-build `
             /p:CollectCoverage=true `
             /p:CoverletOutput="$PWD\TestResults\NetSdrClientApp.coverage.xml" `
             /p:CoverletOutputFormat=opencover `
-            /p:Exclude="[*Tests]*"
-
-          # EchoServer11 tests
-          dotnet test EchoServerTest1/EchoServerTest.csproj -c Release --no-build `
+            /p:Exclude="[EchoServer]*"
+      
+          # EchoServer
+          dotnet test EchoServerTest/EchoServerTest.csproj -c Release --no-build `
             /p:CollectCoverage=true `
-            /p:CoverletOutput="$PWD\TestResults\EchoServer11.coverage.xml" `
+            /p:CoverletOutput="$PWD\TestResults\EchoServer.coverage.xml" `
             /p:CoverletOutputFormat=opencover `
             /p:Exclude="[*Tests]*"
-
+        shell: pwsh
       # 3) END: SonarScanner
       - name: SonarScanner End
-        shell: pwsh
         run: dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+        shell: pwsh
